--- a/events/templates/events/artist_detail.html
+++ b/events/templates/events/artist_detail.html
@@ -26,7 +26,7 @@
             <h3>Upcoming Events</h3>
             <div class="list-group mb-4">
                 {% for event in upcoming_events %}
-                    <a href="{% url 'events:event_detail' event.pk %}" class="list-group-item list-group-item-action">
+                    <a href="{% url 'events:event_detail' event.pk event.slug %}" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">{{ event.title }}</h5>
                             <small>{{ event.date|date:"F j, Y" }}</small>
@@ -45,7 +45,7 @@
             <h3>Past Events</h3>
             <div class="list-group">
                 {% for event in past_events %}
-                    <a href="{% url 'events:event_detail' event.pk %}" class="list-group-item list-group-item-action">
+                    <a href="{% url 'events:event_detail' event.pk event.slug %}" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">{{ event.title }}</h5>
                             <small>{{ event.date|date:"F j, Y" }}</small>
