--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -27,7 +27,7 @@
                                 {{ artist.name }}{% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </p>
-                        <a href="{% url 'events:event_detail' event.pk %}" class="btn btn-primary">View Details</a>
+                        <a href="{% url 'events:event_detail' event.pk event.slug %}" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                                 {{ artist.name }}{% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </p>
-                        <a href="{% url 'events:event_detail' event.pk %}" class="btn btn-outline-secondary">View Details</a>
+                        <a href="{% url 'events:event_detail' event.pk  event.slug %}" class="btn btn-outline-secondary">View Details</a>
                     </div>
                 </div>
             </div>
