--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -34,7 +34,7 @@
                                         {{ artist.name }}{% if not forloop.last %}, {% endif %}
                                     {% endfor %}
                                 </p>
-                                <a href="{% url 'events:event_detail' event.pk %}" class="btn btn-primary">View Details</a>
+                                <a href="{% url 'events:event_detail' event.pk event.slug %}" class="btn btn-primary">View Details</a>
                             </div>
                         </div>
                     </div>
