--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -11,7 +11,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'events:home' %}">Music Events</a>
+            <a class="navbar-brand" href="{% url 'events:home' %}">
+                <img src="{% static 'images/logo.png' %}" alt="Music Events Logo" height="40" class="d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
