--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'events:home' %}">
-                <img src="{% static 'images/logo.png' %}" alt="Music Events Logo" height="40" class="d-inline-block align-text-top">
+                <img src="{% static SITE_LOGO %}" alt="Music Events Logo" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
