--- a/events/templates/events/language_selector.html
+++ b/events/templates/events/language_selector.html
@@ -1,13 +1,13 @@
 {% load i18n %}
-<form action="{% url 'set_language' %}" method="post" class="d-flex align-items-center ms-3">
+<form action="{% url 'set_language' %}" method="post" class="d-flex align-items-center h-100">
     {% csrf_token %}
-    <input name="next" type="hidden" value="{{ request.path }}">
-    <select name="language" class="form-select form-select-sm" onchange="this.form.submit()">
-        {% get_current_language as CURRENT_LANGUAGE %}
-        {% get_available_languages as LANGUAGES %}
-        {% for lang_code, lang_name in LANGUAGES %}
-            <option value="{{ lang_code }}" {% if lang_code == CURRENT_LANGUAGE %}selected{% endif %}>
-                {{ lang_name }}
+    {% get_current_language as CURRENT_LANGUAGE %}
+    {% get_language_info_list for LANGUAGES as languages %}
+    <input name="next" type="hidden" value="{% if CURRENT_LANGUAGE == 'es' %}{{ request.path|slice:'3:' }}{% else %}{{ request.path }}{% endif %}">
+    <select name="language" class="form-select form-select-sm bg-dark text-white border-secondary mt-2" style="width: auto; min-width: 100px; margin-left: 0.5rem;" onchange="this.form.submit()">
+        {% for language in languages %}
+            <option value="{{ language.code }}" {% if language.code == CURRENT_LANGUAGE %}selected{% endif %}>
+                {{ language.name_local }}
             </option>
         {% endfor %}
     </select>
