--- a/events/templates/events/language_selector.html
+++ b/events/templates/events/language_selector.html
@@ -3,7 +3,7 @@
     {% csrf_token %}
     {% get_current_language as CURRENT_LANGUAGE %}
     {% get_language_info_list for LANGUAGES as languages %}
-    <input name="next" type="hidden" value="{% if CURRENT_LANGUAGE != 'en' %}{{ request.path|slice:'3:' }}{% else %}{{ request.path }}{% endif %}">
+    <input name="next" type="hidden" value="/">
     <select name="language" class="form-select form-select-sm bg-dark text-white border-secondary mt-2" style="width: auto; min-width: 100px; margin-left: 0.5rem;" onchange="this.form.submit()">
         {% for language in languages %}
             <option value="{{ language.code }}" {% if language.code == CURRENT_LANGUAGE %}selected{% endif %}>
