--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Music Events{% endblock %}</title>
+    <title>{% block title %}{{ SITE_NAME }}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'events:home' %}">
-                <img src="{% static SITE_LOGO %}" alt="{% trans 'Music Events Logo' %}" height="40" class="d-inline-block align-text-top">
+                <img src="{% static SITE_LOGO %}" alt="{{ SITE_NAME }} {% trans 'Logo' %}" height="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -65,11 +65,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>{% trans "Music Events" %}</h5>
+                    <h5>{{ SITE_NAME }}</h5>
                     <p>{% trans "Your source for the best music events in town." %}</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; {% now "Y" %} {% trans "Music Events" %}. {% trans "All rights reserved." %}</p>
+                    <p>&copy; {% now "Y" %} {{ SITE_NAME }}. {% trans "All rights reserved." %}</p>
                 </div>
             </div>
         </div>
