--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,11 +1,11 @@
 {% extends 'events/base.html' %}
 {% load i18n %}
 
-{% block title %}{% trans "Home" %} - {% trans "Music Events" %}{% endblock %}
+{% block title %}{% trans "Home" %} - {{ SITE_NAME }}{% endblock %}
 
 {% block content %}
 <div class="jumbotron bg-light p-5 rounded">
-    <h1 class="display-4">{% trans "Welcome to Music Events" %}</h1>
+    <h1 class="display-4">{% trans "Welcome to" %} {{ SITE_NAME }}</h1>
     <p class="lead">{% trans "Discover the best music events in your area." %}</p>
     <hr class="my-4">
     <p>{% trans "Browse upcoming events, artists, and venues all in one place." %}</p>
