--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/cookie-consent.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -76,5 +77,13 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'events/js/cookie-consent.js' %}"></script>
+
+    <div id="cookie-consent-banner">
+        <div class="container">
+            <p>{% trans "This website uses cookies to ensure you get the best experience on our website." %}</p>
+            <button class="btn-accept" onclick="acceptCookies()">{% trans "Accept" %}</button>
+        </div>
+    </div>
 </body>
 </html>
