Add pagination to events, artists, and venues list views

--- a/events/templates/events/artist_list.html
+++ b/events/templates/events/artist_list.html
@@ -24,6 +24,9 @@
             </div>
         {% endfor %}
     </div>
+    
+    <!-- Pagination -->
+    {% include "events/includes/pagination.html" %}
 {% else %}
     <p>No artists available.</p>
 {% endif %}
