--- a/events/templates/events/venue_list.html
+++ b/events/templates/events/venue_list.html
@@ -23,6 +23,9 @@
             </div>
         {% endfor %}
     </div>
+    
+    <!-- Pagination -->
+    {% include "events/includes/pagination.html" %}
 {% else %}
     <p>No venues available.</p>
 {% endif %}
