--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -34,6 +34,9 @@
             </div>
         {% endfor %}
     </div>
+    
+    <!-- Pagination -->
+    {% include "events/includes/pagination.html" %}
 {% else %}
     <p>No upcoming events at this time.</p>
 {% endif %}
